syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.vanga";

import "common.proto";

message RetrieveFeedChargeRequest {
    string userId = 1;
    string feedId = 2;
}

message RetrieveFeedChargeResponse {
    CommonStatus status = 1;
    bool hasAccess = 2;
}

service FeedChargeService {
    rpc RetrieveFeedChargeAccess(RetrieveFeedChargeRequest) returns (RetrieveFeedChargeResponse) {};
}